# Questioner

./: .env.example  .gitignore  CHANGELOG.md  GITHUB.md  LICENSE  README.md  README.zh-CN.md  app.py  main.py  pyproject.toml  requirements.txt  start.bat
bioquestion/: __init__.py  __main__.py  _bootstrap.py  cli.py  display.py  extract.py  grade.py  i18n.py  llm.py  pdf_reader.py  prompts.py  quiz.py  report_note.py  schemas.py  scoring.py  stats.py  ui_strings.py
examples/: answers.example.json  literature_sample.txt
questioner/: __init__.py  _bootstrap.py  display.py  extract.py  grade.py  i18n.py  prompts.py  quiz.py  report_note.py  ui_strings.py
scripts/: push_bioquestion.ps1
