[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bioquestion"
version = "1.2.2"
description = "Biomedical literature learning workflow: extract, quiz, grade"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "openai>=1.40.0",
    "anthropic>=0.40.0",
    "deep-translator>=1.11.4",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "streamlit>=1.32.0",
    "pymupdf>=1.24.0",
    "rapidocr-onnxruntime>=1.3.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.8.0",
    "json-repair>=0.30.0",
]

[project.scripts]
bioquestion = "bioquestion.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["bioquestion*"]
